fixed anchor tag issues with z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3338,6 +3338,7 @@ Image
 				margin: 0;
 				top: 0;
 				position: fixed;
+				z-index: 1;
 			}
 
 			#wrapper section > header {
